# code-search

./: .codacy.yaml  .editorconfig  .gitignore  .worktreeinclude  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md  codecov.yml  eslint.config.ts  hk.pkl  mise.toml  orca.yaml  package.json  release-please-config.json  sonar-project.properties  tsconfig.json  tsdown.config.ts
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agent-memory/please-implement-executor/: MEMORY.md  csp-bun-mock-module-irreversible.md  csp-clear-index-safety-guard.md  csp-cli-cache-di-seam.md  csp-dense-roundtrip-no-drift.md  csp-loadfromdisk-model-dim-alignment.md  csp-loadorbuild-cache-contract.md  csp-test-files-ahead-of-impl.md  csp-typecheck-baseline-red.md  csp-upstream-no-disk-cache.md  csp-worktree-test-env-gotchas.md
.claude/agent-memory/review-review-pr-test-analyzer/: MEMORY.md  csp-test-patterns.md
.claude/agent-memory/review-review-silent-failure-hunter/: MEMORY.md  csp-error-handling-conventions.md
.claude/agent-memory/review-review-type-design-analyzer/: MEMORY.md  serialization-trust-boundaries.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codspeed.yml  release-please.yml  release-rust.yml  release-sdk.yml  rust.yml  sonar.yml
.please/: INDEX.md  config.yml
.please/docs/: tracks.jsonl
.please/docs/decisions/: 0001-native-tree-sitter.md  0002-index-storage-cache-model.md  0003-rewrite-in-rust.md  0004-rust-grammar-coverage-language-pack.md  index.md
.please/docs/knowledge/: product-guidelines.md  product.md  tech-stack.md  workflow.md
.please/docs/product-specs/: index.json  index.md
.please/docs/product-specs/indexing/: spec.json  spec.md
.please/docs/product-specs/rewrite-csp-in-rust/: spec.json  spec.md
.please/docs/references/: cocoindex.md  index.md  model2vec.md  semble.md
.please/docs/tracks/: tech-debt-tracker.md
.please/docs/tracks/active/cspindex-orchestrator-20260617/: metadata.json  plan.md
.please/docs/tracks/active/rust-rewrite-20260618/: metadata.json  plan.md  spec.md
.please/docs/tracks/completed/cspindex-orchestrator-20260617/: metadata.json  plan.md  spec.md
.please/docs/tracks/completed/rust-rewrite-20260618/: metadata.json  plan.md
crates/csp/: Cargo.toml  README.md
crates/csp-cli/: Cargo.toml
crates/csp-cli/agents/: opencode.md
crates/csp-cli/src/: main.rs  mcp_server.rs
crates/csp-node/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  package.json
crates/csp-node/src/: lib.rs
crates/csp/benches/: core.rs
crates/csp/src/: lib.rs  mcp.rs  search.rs  stats.rs  tokens.rs  types.rs  utils.rs
crates/csp/src/chunking/: core.rs  mod.rs  source.rs
crates/csp/src/indexing/: cache.rs  create.rs  dense.rs  file_walker.rs  files.rs  index.rs  mod.rs  sparse.rs
crates/csp/src/ranking/: boosting.rs  mod.rs  penalties.rs  weighting.rs
npm/: README.md
npm/csp/: install.js  package.json
npm/csp/lib/: resolve.js
npm/scripts/: generate-platform-packages.mjs
plugins/csp/: .mcp.codex.json  .mcp.json  README.md
plugins/csp/.claude-plugin/: plugin.json
plugins/csp/.codex-plugin/: plugin.json
plugins/csp/skills/csp-search/: SKILL.md
scripts/: install.sh
src/: cli.test.ts  cli.ts  index.test.ts  index.ts  languages.test.ts  languages.ts  search.test.ts  search.ts  stats.test.ts  stats.ts  tokens.test.ts  tokens.ts  types.test.ts  types.ts  utils.test.ts  utils.ts  version.ts
src/agents/: antigravity.md  claude.md  commandcode.md  copilot.md  cursor.md  gemini.md  kiro.md  opencode.md  pi.md  reasonix.md
src/chunking/: chunk-source.test.ts  chunk-source.ts  core.test.ts  core.ts
src/indexing/: cache.test.ts  cache.ts  create.test.ts  create.ts  dense.test.ts  dense.ts  file-walker.test.ts  file-walker.ts  files.test.ts  files.ts  index.test.ts  index.ts  sparse.test.ts  sparse.ts  types.test.ts  types.ts
src/mcp/: server.test.ts  server.ts
src/ranking/: boosting.test.ts  boosting.ts  penalties.test.ts  penalties.ts  weighting.test.ts  weighting.ts
