# Cargo workspace for the Rust rewrite of @pleaseai/csp (see ADR-0003).
#
# Phase 0 scaffold. The TypeScript implementation under `src/` remains the
# source of truth until the Rust line reaches behavioral parity, at which point
# it is retired and this becomes the primary tree.
[workspace]
resolver = "2"
members = ["crates/csp", "crates/csp-cli"]

[workspace.package]
version = "0.0.0" # x-release-please-version
edition = "2021"
license = "MIT"
repository = "https://github.com/pleaseai/code-search"
authors = ["csp maintainers"]

# Planned dependency menu (ADR-0003 crate mapping). Member crates opt in
# phase by phase with `<dep>.workspace = true`; listing here does not fetch.
[workspace.dependencies]
csp = { path = "crates/csp" }
model2vec-rs = "0.2"   # Phase 3 — dense embeddings (official MinishLab port)
tree-sitter = "0.26"   # Phase 2 — AST chunking
ignore = "0.4"         # Phase 3 — .gitignore / .cspignore file walking
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }  # Phase 6 — MCP server
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }  # Phase 6 — async runtime for rmcp
schemars = "1.0"       # Phase 6 — MCP tool parameter JSON schemas
clap = { version = "4", features = ["derive"] }  # Phase 5 — CLI
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
regex = "1"            # Phase 1 — ranking/penalty patterns (no lookarounds)
fancy-regex = "0.16"   # Phase 1 — boosting definition patterns (lookbehind/lookahead)
indexmap = "2"         # Phase 1 — insertion-ordered score maps (Map<Chunk,number> parity)
sha2 = "0.10"          # Phase 3 — content-hash cache keys (sha256, parity with node:crypto)
tempfile = "3"         # Phase 3/4 — temp dirs (git clone checkout) + tests

# Single-binary release profile (ADR-0003 motivation #1).
[profile.release]
lto = true
codegen-units = 1
strip = true
