[package]
name = "csp"
description = "Hybrid code search for agents — core library (Rust rewrite of MinishLab/semble)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Populated per the ADR-0003 migration phases.
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
fancy-regex = { workspace = true }
indexmap = { workspace = true }
ignore = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
# Phase 3 — real Model2Vec dense embeddings (official MinishLab Rust port).
model2vec-rs = { workspace = true }
# Phase 3 — tree-sitter AST chunking (curated grammar set; statically linked for
# the single-binary goal — unsupported languages fall back to line chunking).
tree-sitter = { workspace = true }
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
